The lock screen doesn't show up after system resumes from suspend when no USB device connected
It's supposed to have the lock screen shown instead of text messages on the screen (Please see the attached file) when system resume from suspend. The issue is introduced by da9d012.ubuntu22.04_xorg-server_21.1.3_without_usb_connected.log